# TriangleCS

./: README.md  TriangleCS.webm
py_srvcli/: CMakeLists.txt  package.xml  setup.py
py_srvcli/msg/: Dimensions.msg
py_srvcli/py_srvcli/: client.py  server.py
py_srvcli/srv/: Triangle.srv
